# GroupChat

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  client.py  group_chat.py  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: release.yml
chat/: chat.proto  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py
