[tool.poetry]
name = "groupchat"
version = "0.3.14"
description = ""
authors = ["Krystian Krakowski <kkrakowski22@gmail.com>"]
readme = "README.md"
packages = [{include = "group_chat.py"}]

[tool.poetry.dependencies]
python = "^3.12"
grpcio-tools = "^1.64.1"
protobuf = "^5.28.2"
google = "^3.0.0"
trustme = "^1.1.0"
types-protobuf = "^5.26.0.20240626"
grpc-stubs = "^1.53.0.5"
mypy-protobuf = "^3.6.0"
typer = "^0.12.3"

[tool.poetry.scripts]
group-chat = "group_chat:app"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
